# tiny-interpreter

./: CMakeLists.txt  ast.h  binary_operator.cpp  binary_operator.h  common.h  interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  main.cpp  operand.cpp  operand.h  parser.cpp  parser.h  token.cpp  token.h  tree.cpp  tree.h
